@@ -5,6 +5,9 @@ CHANGES IN CUPS V1.1.15
 
 	- Updated the CUPS license agreement for the new MacOS
 	  license exception.
+	- The LPD mini-daemon (cups-lpd) now passes the
+	  job-originating-host-name attribute to the scheduler
+	  (cupsd).
 	- Updated the IPP backend to reconnect after downgrading
 	  from IPP/1.1 to 1.0, and when sending requests to HP
 	  JetDirect interfaces that don't support HTTP
